# hackharvard

./: .gitignore  README.md
backend/: audio_streams.py  chunking.py  config.py  mainserver.py  pyproject.toml  recommender.py  requirements.txt  topic_manager.py  transcriber.py
backend/test/: ws_chunking.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  topics.schema.json  useFloatingWindow.js  useWsTopics.js
ios/: AUDIO_STREAMING_README.md  app.json  package-lock.json  package.json  server-package.json  tsconfig.json  websocket-server.js
ios/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
