[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asciimatics>=1.15.0",
    "attrs==25.3.0",
    "cachetools==6.2.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "dotenv==0.9.9",
    "frozenlist==1.7.0",
    "google-api-core==2.25.2",
    "google-auth==2.41.1",
    "google-cloud-aiplatform==1.71.1",
    "google-cloud-bigquery==3.38.0",
    "google-cloud-core==2.4.3",
    "google-cloud-resource-manager==1.14.2",
    "google-cloud-speech==2.33.0",
    "google-cloud-storage==2.19.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.75.1",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "instructor==1.11.3",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "multidict==6.6.4",
    "numpy==2.3.3",
    "openai==1.109.1",
    "packaging==25.0",
    "propcache==0.4.0",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "rich==14.1.0",
    "rsa==4.9.1",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "vertexai==1.71.1",
    "websockets==15.0.1",
    "yarl==1.20.1",
]
